--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Stanford Graph</title>
+    <script src="./js/d3.js"></script>
+    <script src="./js/d3.tip.v0.6.3.js"></script>
   </head>
   <body>
     <div id='root'>
