--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stanford Graph</title>
+    <link rel="stylesheet" type="text/css" href="./css/joint.min.css" />
     <script src="./js/d3.js"></script>
     <script src="./js/d3.tip.v0.6.3.js"></script>
   </head>
