Renamed css file. Node colors are now based on their class name e.g. starter classes are red

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Stanford Graph</title>
-    <link rel="stylesheet" type="text/css" href="./css/joint.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <script src="./js/d3.js"></script>
     <script src="./js/d3.tip.v0.6.3.js"></script>
   </head>
