Added to Readme. Edited html. Added math and science requirements to CS spec sheet. Added background to tooltip

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Stanford Graph</title>
+    <title>Prerequisite Graph</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <script src="./js/d3.js"></script>
     <script src="./js/d3.tip.v0.6.3.js"></script>
